[package]
name = "rgbcx-sys"
version = "1.1.3+0.1.0"
authors = ["Sewer56 <admin@sewer56.dev>"]
edition = "2024"
description = "Rust bindings to the rgbcx (BC1-BC5 decoder/encoder) from Rich Geldreich's bc7enc_rdo project."
repository = "https://github.com/Sewer56/rgbcx-sys"
license = "MIT OR Unlicense"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.71.1"
cc = "1"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install g++ for cross compilation
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt update && apt install -y g++:$CROSS_DEB_ARCH gcc:$CROSS_DEB_ARCH g++-9:$CROSS_DEB_ARCH gcc-9:$CROSS_DEB_ARCH cpp:$CROSS_DEB_ARCH binutils-aarch64-linux-gnu:$CROSS_DEB_ARCH"
]

[workspace.metadata.cross.target.armv7-unknown-linux-gnueabihf]
# Install g++ for cross compilation
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt update && apt install -y g++:$CROSS_DEB_ARCH gcc:$CROSS_DEB_ARCH g++-9:$CROSS_DEB_ARCH gcc-9:$CROSS_DEB_ARCH cpp:$CROSS_DEB_ARCH binutils-arm-linux-gnueabihf:$CROSS_DEB_ARCH"
]