[package]
name = "rgbcx-sys"
version = "1.1.3+0.1.0"
authors = ["Sewer56 <admin@sewer56.dev>"]
edition = "2024"
description = "Rust bindings to the rgbcx (BC1-BC5 decoder/encoder) from Rich Geldreich's bc7enc_rdo project."
repository = "https://github.com/Sewer56/rgbcx-sys"
license = "MIT OR Unlicense"
keywords = []
categories = []

# Exclude compiled artifacts
include = [
    "**/*.rs",
    "src/**",
    "Cargo.toml",
    "bc7enc_rdo/rgbcx.h",
    "bc7enc_rdo/rgbcx_table4.h",
    "bc7enc_rdo/rgbcx_table4_small.h",
    "bc7enc_rdo/rgbcx.cpp",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[build-dependencies]
bindgen = "0.71.1"
cc = "1"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install g++ for cross compilation
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt update && apt install -y g++ gcc"
]

[workspace.metadata.cross.target.armv7-unknown-linux-gnueabihf]
# Install g++ for cross compilation
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt update && apt install -y g++ gcc"
]